tests/baselines/reference/stringLiteralsWithEqualityChecks04.errors.txt
stringLiteralsWithEqualityChecks04.ts(16,5): error TS2367: This comparison appears to be unintentional because the types '"foo"' and '"bar"' have no overlap.
stringLiteralsWithEqualityChecks04.ts(19,5): error TS2367: This comparison appears to be unintentional because the types 'Refrigerator | "foo"' and '"bar"' have no overlap.
stringLiteralsWithEqualityChecks04.ts(20,5): error TS2367: This comparison appears to be unintentional because the types '"bar"' and 'Refrigerator | "foo"' have no overlap.
stringLiteralsWithEqualityChecks04.ts(25,5): error TS2367: This comparison appears to be unintentional because the types '"foo"' and '"bar"' have no overlap.
stringLiteralsWithEqualityChecks04.ts(28,5): error TS2367: This comparison appears to be unintentional because the types 'Refrigerator | "foo"' and '"bar"' have no overlap.
stringLiteralsWithEqualityChecks04.ts(29,5): error TS2367: This comparison appears to be unintentional because the types '"bar"' and 'Refrigerator | "foo"' have no overlap.


==== stringLiteralsWithEqualityChecks04.ts (6 errors) ====
    interface Runnable {
        isRunning: boolean;
    }
    
    interface Refrigerator extends Runnable {
        makesFoodGoBrrr: boolean;
    }
    
    let x: string;
    let y: "foo" | Refrigerator;
    
    let b: boolean;
    b = x == y;
    b = "foo" == y
    b = y == "foo";
    b = "foo" == "bar";
        ~~~~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '"foo"' and '"bar"' have no overlap.
    b = "bar" == x;
    b = x == "bar";
    b = y == "bar";
        ~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'Refrigerator | "foo"' and '"bar"' have no overlap.
    b = "bar" == y;
        ~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '"bar"' and 'Refrigerator | "foo"' have no overlap.
    
    b = x != y;
    b = "foo" != y
    b = y != "foo";
    b = "foo" != "bar";
        ~~~~~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '"foo"' and '"bar"' have no overlap.
    b = "bar" != x;
    b = x != "bar";
    b = y != "bar";
        ~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'Refrigerator | "foo"' and '"bar"' have no overlap.
    b = "bar" != y;
        ~~~~~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types '"bar"' and 'Refrigerator | "foo"' have no overlap.
    